--- a/Coin Flip Game/styles/coinflip.css
+++ b/Coin Flip Game/styles/coinflip.css
@@ -3,6 +3,14 @@ body
     background-color: rgb(27, 27, 27);
 }
 
+.title-text
+{
+    color: white;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
 .image-icon
 {
     height: 100px;
